# arbiter_wrr_design

./: .gitignore  README.md  prompt.txt  pyproject.toml
docs/: Specification.md
sources/: arbiter_wrr_lock.sv
tests/: test_arbiter_hidden.py
